update api definition and paths

--- a/web/game/characters/index.html
+++ b/web/game/characters/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="/web/scripts/style.css"/>
+    <link rel="stylesheet" type="text/css" href="/scripts/style.css"/>
     <meta charset="UTF-8">
     <title>Character List</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="/web/scripts/lib/p5.min.js"></script>
-    <script src="/web/scripts/constants.js"></script>
-    <script src="/web/scripts/pinterface.js"></script>
+    <script src="/scripts/lib/p5.min.js"></script>
+    <script src="/scripts/constants.js"></script>
+    <script src="/scripts/pinterface.js"></script>
     <script src="bottomcanvas.js"></script>
     <script src="rightsketch.js"></script>
     <script src="buttonsleft.js"></script>
-    <script src="/web/scripts/utils.js"></script>
+    <script src="/scripts/utils.js"></script>
     <script src="script.js"></script>
-    <script src="/web/scripts/notifications.js"></script>
-    <script src="/web/scripts/tutorial.js"></script>
+    <script src="/scripts/notifications.js"></script>
+    <script src="/scripts/tutorial.js"></script>
 </head>
 <body>
 <table WIDTH="100%">
@@ -23,16 +23,16 @@
             <div align="center" id="username"></div>
         </td>
         <td class="centerc">
-            <div align="center"><a href="/web">My Profile</a></div>
+            <div align="center"><a href="/">My Profile</a></div>
         </td>
         <td class="centerc">
-            <div align="center"><a href="/web/money/conversion">Conversion</a></div>
+            <div align="center"><a href="/money/conversion">Conversion</a></div>
         </td>
         <td class="centerc">
-            <div align="center"><a href="/web/shop">Shop</a></div>
+            <div align="center"><a href="/shop">Shop</a></div>
         </td>
         <td class="centerc">
-            <div align="center"><a href="/web/friends">Friend list</a></div>
+            <div align="center"><a href="/friends">Friend list</a></div>
         </td>
         <td class="rightc">
             <div align="right"><a href="#" onclick="logout()">Logout</a></div>
