--- a/web/game/match/index.html
+++ b/web/game/match/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="wrapper">
 <head>
-    <link rel="stylesheet" type="text/css" href="/web/scripts/style.css" media="screen"/>
+    <link rel="stylesheet" type="text/css" href="/scripts/style.css" media="screen"/>
     <meta charset="utf-8">
     <title>Battler Interface wwww</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -114,17 +114,17 @@
             }
         }
     </style>
-    <script src="/web/scripts/lib/p5.min.js"></script>
+    <script src="/scripts/lib/p5.min.js"></script>
     <!-- <script src="/scripts/p5.dom.min.js"></script> -->
-    <script src="/web/scripts/constants.js"></script>
+    <script src="/scripts/constants.js"></script>
     <script src="interface.js"></script>
     <script src="interface_structs.js"></script>
-    <script src="/web/scripts/utils.js"></script>
+    <script src="/scripts/utils.js"></script>
     <script src="script.js"></script>
     <script src="backcanvas.js"></script>
     <!-- <script src="/scripts/POPUP.js"></script> -->
     <script src="scroll.js"></script>
-    <script src="/web/scripts/tutorial.js"></script>
+    <script src="/scripts/tutorial.js"></script>
 </head>
 <body>
 <div align="left" id="bacc" class="canvas"></div>
