--- a/web/shop/index.html
+++ b/web/shop/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="/web/scripts/style.css" media="screen"/>
+    <link rel="stylesheet" type="text/css" href="/scripts/style.css" media="screen"/>
     <meta charset="UTF-8">
     <title>Shop</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="/web/scripts/lib/p5.min.js"></script>
-    <script src="/web/scripts/interface_structs.js"></script>
+    <script src="/scripts/lib/p5.min.js"></script>
+    <script src="/scripts/interface_structs.js"></script>
     <script src="script.js"></script>
-    <script src="/web/scripts/constants.js"></script>
-    <script src="/web/scripts/loading_bar.js"></script>
-    <script src="/web/scripts/utils.js"></script>
-    <script src="/web/scripts/notifications.js"></script>
-    <script src="/web/scripts/tutorial.js"></script>
+    <script src="/scripts/constants.js"></script>
+    <script src="/scripts/loading_bar.js"></script>
+    <script src="/scripts/utils.js"></script>
+    <script src="/scripts/notifications.js"></script>
+    <script src="/scripts/tutorial.js"></script>
 </head>
 <body>
 <table WIDTH="100%">
@@ -21,16 +21,16 @@
             <div align="center" id="username"></div>
         </td>
         <td class="centerc">
-            <div align="center"><a href="/web">My Profile</a></div>
+            <div align="center"><a href="/">My Profile</a></div>
         </td>
         <td class="centerc">
-            <div align="center"><a href="/web/game/characters">Choose chars</a></div>
+            <div align="center"><a href="/game/characters">Choose chars</a></div>
         </td>
         <td class="centerc">
-            <div align="center"><a href="/web/money/conversion">Conversion</a></div>
+            <div align="center"><a href="/money/conversion">Conversion</a></div>
         </td>
         <td class="centerc">
-            <div align="center"><a href="/web/friends">Friend list</a></div>
+            <div align="center"><a href="/friends">Friend list</a></div>
         </td>
         <td class="rightc">
             <div align="right"><a href="#" onclick="logout()">Logout</a></div>
@@ -43,19 +43,19 @@
             <table id="moneytable" style="width: 250px;" border="0px">
                 <tr>
                     <td width="33%" class="middlec">
-                        <img src="/web/images/locked/white_dust.png" style="width:40px;height:40px;"
+                        <img src="/images/locked/white_dust.png" style="width:40px;height:40px;"
                              alt="white dust"><br>
                         <div id="wDust">0
                         </div>
                     </td>
                     <td width="33%" class="middlec">
-                        <img src="/web/images/locked/blue_dust.png" style="width:40px;height:40px;"
+                        <img src="/images/locked/blue_dust.png" style="width:40px;height:40px;"
                              alt="blue dust"><br>
                         <div id="bDust">0
                         </div>
                     </td>
                     <td width="33%" class="middlec">
-                        <img src="/web/images/locked/yellow_dust.png" style="width:40px;height:40px;"
+                        <img src="/images/locked/yellow_dust.png" style="width:40px;height:40px;"
                              alt="yellow dust"><br>
                         <div id="yDust">0
                         </div>
@@ -63,13 +63,13 @@
                 </tr>
                 <tr>
                     <td width="33%" class="middlec">
-                        <img src="/web/images/locked/purple_dust.png" style="width:40px;height:40px;"
+                        <img src="/images/locked/purple_dust.png" style="width:40px;height:40px;"
                              alt="purple dust"><br>
                         <div id="pDust">0
                         </div>
                     </td>
                     <td width="33%" class="middlec">
-                        <img src="/web/images/locked/star_dust.png" style="width:40px;height:40px;"
+                        <img src="/images/locked/star_dust.png" style="width:40px;height:40px;"
                              alt="stardust"><br>
                         <div id="sDust">0
                         </div>
