--- a/web/auth/signin/index.html
+++ b/web/auth/signin/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/web/scripts/style.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/scripts/style.css" media="screen" />
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
@@ -34,7 +34,7 @@
                 return;
             }
 
-            const response = await fetch("/auth/signin", {
+            const response = await fetch("/api/v1/auth/signin", {
                 method: "POST",
                 body: JSON.stringify({
                     username: username,
@@ -54,7 +54,7 @@
                 return;
             }
 
-            window.location.href = "/web/";
+            window.location.href = "/";
 
             // let xhr = new XMLHttpRequest();
             // xhr.open('POST', '/login', true);
@@ -97,7 +97,7 @@
             </button>
             <br>
             <br>
-            <a href="/web/auth/register">Or register instead</a>
+            <a href="/auth/register">Or register instead</a>
         </form>
     </div>
 </body>
