--- a/web/auth/signin/index.html
+++ b/web/auth/signin/index.html
@@ -44,12 +44,12 @@
             if (!response.ok) {
                 error = await response.json();
 
-                if (response.status === 400) {
+                if (error.error && error.error.id === 5) {
                     document.getElementById("warnings").style = "color: #FF4133;";
-                    document.getElementById("warnings").innerText = error.error.message;
+                    document.getElementById("warnings").innerText = "Incorrect username or password";
                 } else {
-                    document.getElementById("warnings").style = "color: #323232;";
-                    document.getElementById("warnings").innerText = error.error.message;
+                    document.getElementById("warnings").style = "color: #FF4133;";
+                    document.getElementById("warnings").innerText = "Unknown error";
                 }
                 return;
             }
