--- a/web/auth/signin/index.html
+++ b/web/auth/signin/index.html
@@ -83,7 +83,7 @@
 <body>
     <div align="center">
         <form>
-            <h2><b>Welcome home</b></h2>
+            <h2><b>Welcome to Battler!</b></h2>
             <br><br>
             <input type="text" id="username" placeholder="Username or ID" autofocus
                 onkeypress="if (event.keyCode === 13) { document.getElementById('password').focus()}" />
