fix visual bugs and stuff

--- a/web/game/match/index.html
+++ b/web/game/match/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="/scripts/style.css" media="screen"/>
     <meta charset="utf-8">
     <title>Battler Interface wwww</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=1280" />
     <style>
         * {
             box-sizing: border-box;
@@ -130,12 +130,15 @@
 <div align="left" id="bacc" class="canvas"></div>
 <div align="left" id="interface" class="canvas"></div>
 <div align="left" id="p5_loading" class="loadingclass canvas"></div>
-<button class="navigation bottom" id="button1" onclick="scrollToPointLeft(0, false)">⇦</button>
+<!-- <button class="navigation bottom" id="button1" onclick="scrollToPointLeft(0, false)">⇦</button>
 <button class="navigation bottom" id="button2" onclick="scrollToPointLeft(0.5, true, 350)">○</button>
 <button class="navigation bottom" id="button3" onclick="scrollToPointLeft(730, false)">⇨</button>
 <button class="navigation right" id="button4" onclick="scrollToPointUp(0)">⇧</button>
-<button class="navigation right" id="button5" onclick="scrollToPointUp(230)">⇩</button>
+<button class="navigation right" id="button5" onclick="scrollToPointUp(230)">⇩</button> -->
 <div align="right" id="popupWrapper" class="popupWrapper"></div>
+<!-- <div id="fullscreen">
+    <button class="standardbutton" onclick="openFullscreen()">Fullscreen mode</button>
+</div> -->
 <div id="tutorial" class="hidden">
     <div id="tutorial-text"></div>
     <button id="tutorial-next" class="standardbutton" onclick="nextTutorialStep()">Next</button>
