--- a/web/game/rewards/index.html
+++ b/web/game/rewards/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="/scripts/style.css" media="screen"/>
     <meta charset="UTF-8">
     <title>Battle rewards</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=1280" />
     <script src="/scripts/lib/p5.min.js"></script>
     <script src="/scripts/constants.js"></script>
     <script src="script.js"></script>
@@ -94,6 +94,9 @@
         </td>
     </tr>
 </table>
+<!-- <div id="fullscreen">
+    <button class="standardbutton" onclick="openFullscreen()">Fullscreen mode</button>
+</div> -->
 <div align="right" id="popupWrapper" class="popupWrapper"></div>
 <div id="tutorial" class="hidden">
     <div id="tutorial-text"></div>
