--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="/scripts/style.css" media="screen"/>
     <meta charset="UTF-8">
     <title>My profile</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=1280" />
     <script src="/scripts/utils.js"></script>
     <script src="/scripts/profile.js"></script>
     <script src="/scripts/notifications.js"></script>
@@ -87,6 +87,9 @@
     <br>
     <div id="battles2" class="battleswon" align="center"></div>
 </div>
+<!-- <div id="fullscreen">
+    <button class="standardbutton" onclick="openFullscreen()">Fullscreen mode</button>
+</div> -->
 <div align="right" id="popupWrapper" class="popupWrapper"></div>
 <div id="tutorial" class="hidden">
     <div id="tutorial-text"></div>
