--- a/web/friends/index.html
+++ b/web/friends/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="/scripts/style.css"/>
     <meta charset="UTF-8">
     <title>Friend list</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=1280" />
     <script src="/scripts/utils.js"></script>
     <script src="/scripts/constants.js"></script>
     <script src="script.js"></script>
@@ -106,6 +106,9 @@
         init(true);
     </script>
 </table>
+<!-- <div id="fullscreen">
+    <button class="standardbutton" onclick="openFullscreen()">Fullscreen mode</button>
+</div> -->
 <div align="right" id="popupWrapper" class="popupWrapper"></div>
 </body>
 </html>
