--- a/web/game/characters/index.html
+++ b/web/game/characters/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="/scripts/style.css"/>
     <meta charset="UTF-8">
     <title>Character List</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=1280" />
     <script src="/scripts/lib/p5.min.js"></script>
     <script src="/scripts/constants.js"></script>
     <script src="/scripts/pinterface.js"></script>
@@ -91,6 +91,9 @@
         </tr>
     </table>
 </div>
+<!-- <div id="fullscreen">
+    <button class="standardbutton" onclick="openFullscreen()">Fullscreen mode</button>
+</div> -->
 <div align="right" id="popupWrapper" class="popupWrapper"></div>
 <div id="tutorial" class="hidden">
     <div id="tutorial-text"></div>
